Fri Jul  8 14:16:52 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/sample_base.h:
        * tools/dissector/sample_base.cpp:

          Further generalization of the sample dissection. 
        
Fri Jul  8 13:25:39 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          Added logging for the create_topic() error condition of the type_name
          not being registered with type support.

Thu Jul  7 22:08:40 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/sample_base.h:
        * tools/dissector/sample_base.cpp:

          First pass at making the sample dissection generic. Still using
          hard-wired initialization, but getting closer to a point where
          initialization can be done dynamically.

Thu Jul  7 17:44:03 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/common.xsl:

          New template substring-before-last

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/mpb.xsl:

          Include models of externaly-referenced topics in our
          inherited projects list.

Wed Jul  6 16:17:37 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/giop_base.cpp:
        * tools/dissector/packet-datawriter.cpp:
        * tools/dissector/packet-opendds.h:
        * tools/dissector/packet-opendds.cpp:
        * tools/dissector/packet-repo.cpp:
        * tools/dissector/sample_base.h:
        * tools/dissector/sample_base.cpp:

          Adding prototype sample dissectors for working out development
          issues. These are explicitly bound to specific data, captured
          from the DCPS/MultiTopic test. Also cleaned up some now
          redundant debug output.

Wed Jul  6 15:47:21 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * java/build_scripts/jms_scoreboard.pl:

          Same as the previous commit: adapting for alternate Ant installation.
