@@ -40,7 +40,7 @@ namespace OpenDDS
     {
       Sample_Base *dummy = new LocationInfo_Dissector;
       dummy = new PlanInfo_Dissector;
-      dummy = new MoreInfo_Dissector;
+//       dummy = new MoreInfo_Dissector;
       dummy = new UnrelatedInfo_Dissector;
       dummy = new Resulting_Dissector;
 
@@ -68,8 +68,7 @@ namespace OpenDDS
 
 
     Sample_Field::Sample_Field (const char *f, gint l)
-      : data_ (0),
-        format_(f),
+      : format_(f),
         len_(l),
         nested_ (0),
         next_(0)
@@ -77,8 +76,7 @@ namespace OpenDDS
     }
 
     Sample_Field::Sample_Field (Sample_Base *n)
-      : data_ (0),
-        format_(""),
+      : format_(""),
         len_(0),
         nested_ (n),
         next_(0)
@@ -91,29 +89,25 @@ namespace OpenDDS
       delete next_;
     }
 
-    guint
-    Sample_Field::length ()
+    Sample_Field *
+    Sample_Field::chain (Sample_Field *f)
     {
-      return this->nested_ ? this->nested_->compute_length(this->data_) : this->len_;
+      if (next_ != 0)
+        next_->chain (f);
+      else
+        next_ = f;
+      return f;
     }
+
 
     //------------------------------------------------------------------------
 
-    Sample_Base::Sample_Base (const char *type_id)
-      :fixed_length_ (0),
-       ett_payload_ (-1),
-       proto_ (-1),
-       use_subtree_ (true),
+    Sample_Base::Sample_Base ()
+      :ett_payload_ (-1),
+       label_ (0),
        typeId_ (0),
-       field_ (0),
-       last_field_ (0)
+       field_ (0)
     {
-      size_t len = ACE_OS::strlen(type_id);
-      if (len > 0)
-        {
-          this->typeId_ = new char[len+1];
-          ACE_OS::strcpy (this->typeId_, type_id);
-        }
     }
 
     Sample_Base::~Sample_Base ()
@@ -129,6 +123,31 @@ namespace OpenDDS
     }
 
     void
+    Sample_Base::init (const char *type_id,
+                       const char *subtree_label)
+    {
+      size_t len = ACE_OS::strlen(type_id);
+      if (len > 0)
+        {
+          this->typeId_ = new char[len+1];
+          ACE_OS::strcpy (this->typeId_, type_id);
+          Sample_Dissector_Manager::instance().add (*this);
+        }
+
+      len = ACE_OS::strlen(subtree_label);
+      if (len > 0)
+        {
+          this->label_ = new char[len+1];
+          ACE_OS::strcpy (this->label_, subtree_label);
+
+          gint *ett[] = {
+            &ett_payload_
+          };
+          proto_register_subtree_array(ett, array_length(ett));
+        }
+    }
+
+    Sample_Field *
     Sample_Base::add_field (Sample_Field *f)
     {
       if (this->field_ == 0)
@@ -137,10 +156,9 @@ namespace OpenDDS
         }
       else
         {
-          this->last_field_->next_ = f;
+          this->field_->chain (f);
         }
-      this->last_field_ = f;
-      fixed_length_ += f->len_;
+      return f;
     }
 
     size_t
@@ -154,10 +172,11 @@ namespace OpenDDS
       gint remainder = tvb->length - offset;
       guint8* data = (guint8*)ep_tvb_memdup(tvb, offset, remainder);
 
-      if (use_subtree_)
+      if (this->label_ != 0)
         {
           proto_item *item =
-            proto_tree_add_item (tree, proto_, tvb, offset, -1, 0);
+            proto_tree_add_text (tree, tvb, offset, -1,
+                                 "Sample Payload: %s", label_);
           tree = proto_item_add_subtree (item, ett_payload_);
         }
 
@@ -167,7 +186,7 @@ namespace OpenDDS
             {
               proto_tree_add_text (tree, tvb, offset + data_pos, sf->len_,
                                    sf->format_, *(data + data_pos));
-              data_pos += sf->length();
+              data_pos += sf->len_;
             }
           else
             {
@@ -185,53 +204,19 @@ namespace OpenDDS
                           proto_tree *tree,
                           gint &offset)
     {
-#if 0
-      if (tvb->length - offset < this->fixed_length_)
-        return; // error! length is not sufficient for this type.
-#endif
       offset += this->dissect_i (tvb, pinfo, tree, offset);
     }
-
-    guint
-    Sample_Base::compute_length (const char *data)
-    {
-
-      this->fixed_length_ = 0;
-      for (Sample_Field *sf = field_; sf != 0; sf = sf->next_)
-        {
-          sf->data_ = data + this->fixed_length_;
-          this->fixed_length_ += sf->length();
-        }
-      return this->fixed_length_;
-    }
-
-    guint
-    Sample_Base::length () const
-    {
-      return this->fixed_length_;
-    }
-
 
     //----------------------------------------------------------------------
 
     Sample_String::Sample_String (const char *label)
-      : Sample_Base ("string")
     {
-      use_subtree_ = false;
       size_t len = ACE_OS::strlen(label);
       if (len > 0)
         {
           this->label_ = new char[len+1];
           ACE_OS::strcpy (this->label_, label);
         }
-    }
-
-    guint
-    Sample_String::compute_length (const char *data)
-    {
-      this->fixed_length_ =
-        4 + * (reinterpret_cast<const guint32 *>(data));
-      return this->fixed_length_;
     }
 
     size_t
@@ -253,159 +238,89 @@ namespace OpenDDS
       return (*len) + 4;
     }
 
+#if 0
+    Sample_Sequence::Sample_Sequence (const char *label, Sample_Base *element)
+      : element_ (element)
+    {
+      size_t len = ACE_OS::strlen(label);
+      if (len > 0)
+        {
+          this->label_ = new char[len+1];
+          ACE_OS::strcpy (this->label_, label);
+        }
+
+
+    }
+
+    protected:
+      virtual size_t dissect_i (tvbuff_t *, packet_info *, proto_tree *, gint);
+
+      Sample_Base *element_;
+    };
+
+#endif
+
 
     //----------------------------------------------------------------------
 
     LocationInfo_Dissector::LocationInfo_Dissector ()
-      : Sample_Base ("IDL:LocationInfoTypeSupport:1.0")
     {
-      Sample_Dissector_Manager::instance().add (*this);
 
+      this->init ("IDL:LocationInfoTypeSupport:1.0",
+                  "LocationInfo");
+#if 0
       this->add_field (new Sample_Field ("flight_id1: %u", 4));
       this->add_field (new Sample_Field ("flight_id2: %u", 4));
       this->add_field (new Sample_Field ("x: %d", 4));
       this->add_field (new Sample_Field ("y: %d", 4));
       this->add_field (new Sample_Field ("z: %d", 4));
-
-      gint *ett[] = {
-        &ett_payload_
-      };
-
-      proto_ =
-        proto_register_protocol
-        ("Sample Payload: LocationInfo",
-         "LocationInfo",
-         "locationinfo");
-      proto_register_subtree_array(ett, array_length(ett));
+#else
+      Sample_Field *f =
+        this->add_field (new Sample_Field ("flight_id1: %u", 4));
+      f = f->chain (new Sample_Field ("flight_id2: %u", 4));
+      f = f->chain (new Sample_Field ("x: %d", 4));
+      f = f->chain (new Sample_Field ("y: %d", 4));
+      f = f->chain (new Sample_Field ("z: %d", 4));
+#endif
 
     }
 
-#if 0
-
-#pragma DCPS_DATA_TYPE "PlanInfo"
-#pragma DCPS_DATA_KEY "PlanInfo flight_id1"
-#pragma DCPS_DATA_KEY "PlanInfo flight_id2"
-struct PlanInfo {
-  unsigned long flight_id1;
-  unsigned long flight_id2;
-  string flight_name;
-  string tailno;
-};
-
-#endif
-
     PlanInfo_Dissector::PlanInfo_Dissector ()
-      : Sample_Base ("IDL:PlanInfoTypeSupport:1.0")
     {
-      Sample_Dissector_Manager::instance().add (*this);
+      this->init ("IDL:PlanInfoTypeSupport:1.0",
+                  "PlanInfo");
 
       this->add_field (new Sample_Field ("flight_id1: %u", 4));
       this->add_field (new Sample_Field ("flight_id2: %u", 4));
       this->add_field (new Sample_Field (new Sample_String ("flight_name")));
       this->add_field (new Sample_Field (new Sample_String ("tailno")));
-
-      gint *ett[] = {
-        &ett_payload_
-      };
-
-      proto_ =
-        proto_register_protocol
-        ("Sample Payload: PlanInfo",
-         "PlanInfo",
-         "planinfo");
-      proto_register_subtree_array(ett, array_length(ett));
-
     }
 
-
-#if 0
-
-#pragma DCPS_DATA_TYPE "MoreInfo"
-#pragma DCPS_DATA_KEY "MoreInfo flight_id1"
-struct MoreInfo {
-  unsigned long flight_id1;
-  string more;
-};
-
-#endif
-
-   MoreInfo_Dissector::MoreInfo_Dissector ()
-      : Sample_Base ("IDL:MoreInfoTypeSupport:1.0")
+    MoreInfo_Dissector::MoreInfo_Dissector ()
     {
-      Sample_Dissector_Manager::instance().add (*this);
+
+      this->init ("IDL:MoreInfoTypeSupport:1.0",
+                  "MoreInfo");
 
       this->add_field (new Sample_Field ("flight_id1: %u", 4));
       this->add_field (new Sample_Field (new Sample_String ("more")));
-
-      gint *ett[] = {
-        &ett_payload_
-      };
-
-      proto_ =
-        proto_register_protocol
-        ("Sample Payload: MoreInfo",
-         "MoreInfo",
-         "moreinfo");
-      proto_register_subtree_array(ett, array_length(ett));
-
     }
-
-#if 0
-
-#pragma DCPS_DATA_TYPE "UnrelatedInfo"
-// testing cross-joins, this has no keys
-struct UnrelatedInfo {
-  string misc;
-};
-
-#endif
 
     UnrelatedInfo_Dissector::UnrelatedInfo_Dissector ()
-      : Sample_Base ("IDL:UnrelatedInfoTypeSupport:1.0")
     {
-      Sample_Dissector_Manager::instance().add (*this);
 
-      this->add_field (new Sample_Field (new Sample_String ("misc")));
 
-      gint *ett[] = {
-        &ett_payload_
-      };
+      this->init ("IDL:UnrelatedInfoTypeSupport:1.0",
+                  "UnrelatedInfo");
 
-      proto_ =
-        proto_register_protocol
-        ("Sample Payload: UnrelatedInfo",
-         "UnrelatedInfo",
-         "unrelatedinfo");
-      proto_register_subtree_array(ett, array_length(ett));
+     this->add_field (new Sample_Field (new Sample_String ("misc")));
 
     }
 
-#if 0
-
-#pragma DCPS_DATA_TYPE "Resulting"
-#pragma DCPS_DATA_KEY "Resulting flight_id1"
-#pragma DCPS_DATA_KEY "Resulting flight_id2"
-struct Resulting {
-  unsigned long flight_id1;
-  unsigned long flight_id2;
-  string flight_name;
-  long x;
-  long y;
-  long height;
-  string more;
-  string misc;
-};
-
-#endif
-
     Resulting_Dissector::Resulting_Dissector ()
-      : Sample_Base ("IDL:ResultingTypeSupport:1.0")
     {
-      Sample_Dissector_Manager::instance().add (*this);
-
-      gint *ett[] = {
-        &ett_payload_
-      };
+      this->init ("IDL:ResultingTypeSupport:1.0",
+                  "Resulting");
 
       this->add_field (new Sample_Field ("flight_id1: %u", 4));
       this->add_field (new Sample_Field ("flight_id2: %u", 4));
@@ -415,14 +330,6 @@ struct Resulting {
       this->add_field (new Sample_Field ("height: %d", 4));
       this->add_field (new Sample_Field (new Sample_String ("more")));
       this->add_field (new Sample_Field (new Sample_String ("misc")));
-
-      proto_ =
-        proto_register_protocol
-        ("Sample Payload: Resulting",
-         "Resulting",
-         "resulting");
-      proto_register_subtree_array(ett, array_length(ett));
-
 
     }
 
